@@ -27,18 +27,22 @@
  * @package org.zenmagick.mvc.utils
  * @version $Id$
  */
-class ZMViewUtils {
+class ZMViewUtils extends ZMObject {
     const HEADER = 'header';
     const FOOTER = 'footer';
     const NOW = 'now';
     private $resources_;
+    private $view_;
 
 
     /**
      * Create new instance.
+     *
+     * @param ZMView view The current view.
      */
-    function __construct() {
-        //parent::__construct();
+    function __construct($view) {
+        parent::__construct();
+        $this->view_ = $view;
         $this->resources_ = array('css' => array(), 'js' => array());
     }
 
@@ -46,9 +50,18 @@ class ZMViewUtils {
      * Destruct instance.
      */
     function __destruct() {
-        //parent::__destruct();
+        parent::__destruct();
     }
 
+
+    /**
+     * Get the associated view.
+     *
+     * @return ZMView The view.
+     */
+    public function getView() {
+        return $this->view_;
+    }
 
     /*
      * - include .js, inline: top, now, bottom
@@ -65,13 +78,12 @@ class ZMViewUtils {
     /**
      * Add link to the given CSS file or create inline CSS in the head element of the response.
      *
-     * @param ZMView view The current view.
      * @param string filename A relative CSS filename.
      * @param boolean inline Optional flag that can be used to control whether to create a link
      *  or insert CSS inline; default is <code>false</code> to link.
      * @param array attr Optional attribute map; special keys 'prefix' and 'suffix' may be used to wrap.
      */
-    public function cssFile($view, $filename, $inline=false, $attr=array()) {
+    public function cssFile($filename, $inline=false, $attr=array()) {
         if (!array_key_exists($filename, $this->resources_['css'])) {
             // avoid duplicates
             $this->resources_['css'][$filename] = array('filename' => $filename, 'inline' => $inline, 'attr' => $attr);
@@ -81,13 +93,12 @@ class ZMViewUtils {
     /**
      * Add the given JavaScript file to the final contents or create script reference (default).
      *
-     * @param ZMView view The current view.
      * @param string filename A relative JavaScript filename.
      * @param boolean inline Optional flag that can be used to control whether to create a link
      *  or insert JavaScript inline; default is <code>false</code> to link.
      * @param string position Optional position; either <code>HEADER</code> (default), <code>FOOTER</code> or <code>NOW</code>.
      */
-    public function jsFile($view, $filename, $inline=false, $position=self::HEADER) {
+    public function jsFile($filename, $inline=false, $position=self::HEADER) {
         if (array_key_exists($filename, $this->resources_['js'])) {
             // check if we need to do anything else or update the position
             if ($this->resources_['js'][$filename]['done']) {
@@ -110,10 +121,10 @@ class ZMViewUtils {
             $this->resources_['js'][$filename]['done'] = true;
             if ($this->resources_['js'][$filename]['inline']) {
                 echo '<script type="text/javascript">',"\n";
-                $view->fetch($filename);
+                $this->view_->fetch($filename);
                 echo '</script>',"\n";
             } else {
-                echo '<script type="text/javascript" src="',$this->resolveResource($filename, $view),'"></script>',"\n";
+                echo '<script type="text/javascript" src="',$this->resolveResource($filename),'"></script>',"\n";
             }
         }
     }
@@ -127,9 +138,9 @@ class ZMViewUtils {
      * @param ZMView view The current view.
      * @return string The resolved final URL.
      */
-    public function resolveResource($filename, $view) {
-        $request = $view->getVar('request');
-        return $view->asUrl($request, $filename);
+    public function resolveResource($filename) {
+        $request = $this->view_->getVar('request');
+        return $this->view_->asUrl($request, $filename);
     }
 
     /**
@@ -138,18 +149,34 @@ class ZMViewUtils {
      * @param array Resource details.
      * @param string group The group; either <code>css</code> or <code>js</code>.
      * @param string location The location; either <code>ZMViewUtils::HEADER</code> or <code>ZMViewUtils::FOOTER</code>.
-     * @param ZMView view The current view.
      * @return string The final content ready to be injected into the final contents.
      */
-    public function handleResourceGroup($files, $group, $location, $view) {
+    public function handleResourceGroup($files, $group, $location) {
         $contents = '';
 
         if ('js' == $group) {
             foreach ($files as $details) {
-                $contents .= '<script type="text/javascript" src="'.$this->resolveResource($details['filename'], $view).'"></script>'."\n";
+                $contents .= '<script type="text/javascript" src="'.$this->resolveResource($details['filename']).'"></script>'."\n";
             }
         } else if ('css' == $group) {
             //todo: implement
+
+            $slash = ZMSettings::get('zenmagick.mvc.html.xhtml') ? '/' : '';
+            $css = '';
+            foreach ($files as $details) {
+                // merge in defaults
+                $attr = '';
+                $details['attr'] = array_merge(array('rel' => 'stylesheet', 'type' => 'text/css', 'prefix' => '', 'suffix' => ''), $details['attr']);
+                foreach ($details['attr'] as $name => $value) {
+                    if (null !== $value && !in_array($name, array('prefix', 'suffix'))) {
+                        $attr .= ' '.$name.'="'.$value.'"';
+                    }
+                }
+                $css .= $details['attr']['prefix'];
+                $css .= '<link '.$attr.' href="'.$this->resolveResource($details['filename']).'"'.$slash.'>';
+                $css .= $details['attr']['suffix']."\n";
+            }
+            $contents .= $css;
         }
 
         return $contents;
@@ -158,11 +185,9 @@ class ZMViewUtils {
     /**
      * Process all resources.
      *
-     * @param ZMRequest request The current request.
-     * @param ZMView view The current view.
      * @return array Final contents for <em>header</em> and <em>footer</em> or <code>null</code>.
      */
-    public function getResourceContents($view) {
+    public function getResourceContents() {
         if (0 == count($this->resources_['js']) && 0 == count($this->resources_['css'])) {
             return null;
         }
@@ -180,13 +205,17 @@ class ZMViewUtils {
                 $this->resources_['js'][$filename]['done'] = true;
             }
         }
+        if (0 == count($header) && 0 == count($footer) && 0 == count($this->resources_['css'])) {
+            return null;
+        }
 
         // process
         $contents = array('header' => '', 'footer' => '');
-        //$contents['header'] .= $this->handleResourceGroup($css, 'css', self::HEADER, $view);
+        // TODO: group CSS before calling this, so CSS can be group minified too
+        $contents['header'] .= $this->handleResourceGroup($this->resources_['css'], 'css', self::HEADER);
 
-        $contents['header'] .= $this->handleResourceGroup($header, 'js', self::HEADER, $view);
-        $contents['footer'] .= $this->handleResourceGroup($footer, 'js', self::FOOTER, $view);
+        $contents['header'] .= $this->handleResourceGroup($header, 'js', self::HEADER);
+        $contents['footer'] .= $this->handleResourceGroup($footer, 'js', self::FOOTER);
 
         return $contents;
     }
